modify index file for website

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -13,5 +13,17 @@
         <h2>Heading 2</h2>
         <p>Paragraph 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor <em>incididunt ut</em> labore et dolore magna aliqua.</p>
+        <h3> Below is a list.</h3>
+        <ul>
+            <li>first</li>
+            <li>second</li>
+            <li>third</li>
+        </ul>
+        <h3>below is a ordered list.</h3>
+        <ol reversed> <!-- reversed list -->
+            <li>third is here</li>
+            <li>second is here</li>
+            <li>first is here</li>
+        </ol>
     </body>
 </html>
