Added additional pages, learned links, images, lists, etc.

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -2,11 +2,11 @@
 <html lang = "en">
     <head>
         <meta charset = "UTF-8">
-        <title>This is a Webpage</title>
+        <title>TOP Notes</title>
     </head>
 
     <body>
-        <h1>Heading 1</h1>
+        <h1>Foundational Notes</h1>
         <p>Paragraph 1. <strong>ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor</strong> incididunt ut labore et dolore magna aliqua.</p>
         <!--This is a comment-->
@@ -19,11 +19,26 @@
             <li>second</li>
             <li>third</li>
         </ul>
+        <br/> <!-- this is a break -->
         <h3>below is a ordered list.</h3>
         <ol reversed> <!-- reversed list -->
             <li>third is here</li>
-            <li>second is here</li>
-            <li>first is here</li>
+            <li><strong>this is strong and it </strong> is here</li>
+            <li>first is here and also here</li>
+            <a> click me </a> <!--this is a comment. anchor in list is not numbered.-->
         </ol>
+        <h3>Sub Heading 3</h3>
+        <p>Paragraph 3. Notes on links.</p>
+        <ol>
+            <li>Relative links</li>
+                <ul>
+                    <li>Relative links are <a href = "./pages/about.html">links</a> to other pages within our website</li>
+                </ul>
+            <li>Absolute links</li>
+                <ul>
+                    <li>Absolute links are links to other websites. i.e. <a href="https://www.theodinproject.com/about">link to Odin</a></li>
+                </ul>
+        </ol>
+        <h3><a href = "./pages/linksandimages.html">Knowledge Check</a></h3>
     </body>
 </html>
